revise funct of crossword task

--- a/crossword/cs50_crossword_jupiter.ipynb
+++ b/crossword/cs50_crossword_jupiter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +238,22 @@
     "        self.enforce_node_consistency()\n",
     "        self.ac3()\n",
     "        return self.backtrack(dict())\n",
+    "    \n",
+    "    def index_in_list(n, nlist): # help function 1\n",
+    "        '''find a index of the word in the list of words'''\n",
+    "        l = []\n",
+    "        for index, value in enumerate(nlist):\n",
+    "            if value == n:\n",
+    "                l.append(index)\n",
+    "        return l\n",
+    "\n",
+    "    def remove_words_not_consistent(d, ndict): # help fuction 2\n",
+    "        '''return only words that in index list'''\n",
+    "        l = set()\n",
+    "        for index, value in enumerate(ndict):\n",
+    "            if index in d:\n",
+    "                l.add(value)\n",
+    "        return l\n",
     "\n",
     "    def enforce_node_consistency(self):\n",
     "        \"\"\"\n",
@@ -245,7 +261,21 @@
     "        (Remove any values that are inconsistent with a variable's unary\n",
     "         constraints; in this case, the length of the word.)\n",
     "        \"\"\"\n",
-    "        pass\n",
+    "        # get the list of leght of words \n",
+    "        for i in test.values():\n",
+    "            lenth_of_words = [len(d) for d in i]\n",
+    "            break # count one time\n",
+    "        \n",
+    "        # iterate over dict items \n",
+    "        for i, values in test.items():\n",
+    "        #     print(index_in_list(i.length, lenth_of_words))\n",
+    "        #     print(test[i])\n",
+    "        #     print(remove_words_not_consistent(index_in_list(i.length, lenth_of_words), test[i]))\n",
+    "        \n",
+    "            # update dict of the domains\n",
+    "            # find index in the list that not consistent with task\n",
+    "            # check lenght of the word in assigment and update with new values\n",
+    "            test[i] = remove_words_not_consistent(index_in_list(i.length, lenth_of_words), test[i])\n",
     "\n",
     "\n",
     "    def revise(self, x, y):\n",
@@ -253,11 +283,35 @@
     "        Make variable `x` arc consistent with variable `y`.\n",
     "        To do so, remove values from `self.domains[x]` for which there is no\n",
     "        possible corresponding value for `y` in `self.domains[y]`.\n",
-    "\n",
     "        Return True if a revision was made to the domain of `x`; return\n",
     "        False if no revision was made.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError\n",
+    "        # start with false \n",
+    "        revised = False\n",
+    "        # empty list\n",
+    "        update_words = []\n",
+    "        # check if words overlap in assigment\n",
+    "        if self.crossword.overlaps[x, y] is not None:\n",
+    "            # iterate over x and y values\n",
+    "            for word1 in self.domains[x]:\n",
+    "                for word2 in self.domains[y]:\n",
+    "                    # 1 words should not be the same\n",
+    "                    # 2 the lengh of them must be more that letters of overlap\n",
+    "                    # 3 check if i-th value of x not equal to the j-th value of y\n",
+    "                    if word1 != word2 \\\n",
+    "                    and len(word1) >= (self.overlaps[x, y][0] + 1)\\\n",
+    "                    and len(word2) >= (self.overlaps[x, y][1] + 1) \\\n",
+    "                    and word1[self.overlaps[x, y][0]] != word2[self.overlaps[x, y][1]]:\n",
+    "                        # change status of revised\n",
+    "                        revised = True\n",
+    "                        # add to the list\n",
+    "                        update_words.append(word1)\n",
+    "        # itetare of the NOT acr consistem words of x and remome them\n",
+    "        for word in set(update_words):\n",
+    "            # pop the values of x from domain\n",
+    "            self.domains[x].remove(word)\n",
+    "        #return the status \n",
+    "        return revised\n",
     "\n",
     "    def ac3(self, arcs=None):\n",
     "        \"\"\"\n",
@@ -342,73 +396,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(Variable(4, 1, 'across', 4), Variable(0, 1, 'down', 5)): (0, 4),\n",
-       " (Variable(4, 1, 'across', 4), Variable(1, 4, 'down', 4)): (3, 3),\n",
-       " (Variable(4, 1, 'across', 4), Variable(0, 1, 'across', 3)): None,\n",
-       " (Variable(0, 1, 'down', 5), Variable(4, 1, 'across', 4)): (4, 0),\n",
+       "({(Variable(0, 1, 'down', 5), Variable(4, 1, 'across', 4)): (4, 0),\n",
+       "  (Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)): None,\n",
+       "  (Variable(0, 1, 'down', 5), Variable(0, 1, 'across', 3)): (0, 0),\n",
+       "  (Variable(4, 1, 'across', 4), Variable(0, 1, 'down', 5)): (0, 4),\n",
+       "  (Variable(4, 1, 'across', 4), Variable(1, 4, 'down', 4)): (3, 3),\n",
+       "  (Variable(4, 1, 'across', 4), Variable(0, 1, 'across', 3)): None,\n",
+       "  (Variable(1, 4, 'down', 4), Variable(0, 1, 'down', 5)): None,\n",
+       "  (Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4)): (3, 3),\n",
+       "  (Variable(1, 4, 'down', 4), Variable(0, 1, 'across', 3)): None,\n",
+       "  (Variable(0, 1, 'across', 3), Variable(0, 1, 'down', 5)): (0, 0),\n",
+       "  (Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)): None,\n",
+       "  (Variable(0, 1, 'across', 3), Variable(1, 4, 'down', 4)): None},\n",
+       " {'EIGHT',\n",
+       "  'FIVE',\n",
+       "  'FOUR',\n",
+       "  'NINE',\n",
+       "  'ONE',\n",
+       "  'SEVEN',\n",
+       "  'SIX',\n",
+       "  'TEN',\n",
+       "  'THREE',\n",
+       "  'TWO'},\n",
+       " {Variable(0, 1, 'across', 3),\n",
+       "  Variable(0, 1, 'down', 5),\n",
+       "  Variable(1, 4, 'down', 4),\n",
+       "  Variable(4, 1, 'across', 4)})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crossword.overlaps, crossword.words, crossword.variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5,\n",
+       " [[False, True, True, True, False],\n",
+       "  [False, True, False, False, True],\n",
+       "  [False, True, False, False, True],\n",
+       "  [False, True, False, False, True],\n",
+       "  [False, True, True, True, True]],\n",
+       " {Variable(0, 1, 'across', 3),\n",
+       "  Variable(0, 1, 'down', 5),\n",
+       "  Variable(1, 4, 'down', 4),\n",
+       "  Variable(4, 1, 'across', 4)},\n",
+       " 5)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crossword.height, crossword.structure, crossword.variables, crossword.width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True,\n",
+       " ['FIVE',\n",
+       "  'FIVE',\n",
+       "  'THREE',\n",
+       "  'THREE',\n",
+       "  'NINE',\n",
+       "  'NINE',\n",
+       "  'EIGHT',\n",
+       "  'EIGHT',\n",
+       "  'EIGHT',\n",
+       "  'EIGHT',\n",
+       "  'EIGHT',\n",
+       "  'SEVEN',\n",
+       "  'SEVEN',\n",
+       "  'FOUR',\n",
+       "  'FOUR',\n",
+       "  'FOUR',\n",
+       "  'FOUR',\n",
+       "  'FOUR'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def revise(self, x, y):\n",
+    "    \"\"\"\n",
+    "    Make variable `x` arc consistent with variable `y`.\n",
+    "    To do so, remove values from `self.domains[x]` for which there is no\n",
+    "    possible corresponding value for `y` in `self.domains[y]`.\n",
+    "    Return True if a revision was made to the domain of `x`; return\n",
+    "    False if no revision was made.\n",
+    "    \"\"\"\n",
+    "    # start with false \n",
+    "    revised = False\n",
+    "    # empty list\n",
+    "    update_words = []\n",
+    "    # check if words overlap in assigment\n",
+    "    if crossword.overlaps[x, y] is not None:\n",
+    "        # iterate over x and y values\n",
+    "        for word1 in creator.domains[x]:\n",
+    "            for word2 in creator.domains[y]:\n",
+    "                # 1 words should not be the same\n",
+    "                # 2 the lengh of them must be more that letters of overlap\n",
+    "                # 3 check if i-th value of x not equal to the j-th value of y\n",
+    "                if word1 != word2 \\\n",
+    "                and len(word1) >= (crossword.overlaps[x, y][0] + 1)\\\n",
+    "                and len(word2) >= (crossword.overlaps[x, y][1] + 1) \\\n",
+    "                and word1[crossword.overlaps[x, y][0]] != word2[crossword.overlaps[x, y][1]]:\n",
+    "                    # change status of revised\n",
+    "                    revised = True\n",
+    "                    # add to the list\n",
+    "                    update_words.append(word1)\n",
+    "    # itetare of the NOT acr consistem words of x and remome them\n",
+    "    for word in set(update_words):\n",
+    "        # pop the values of x from domain\n",
+    "        creator.domains[x].remove(word)\n",
+    "    #return the status \n",
+    "    return revised, update_words\n",
+    " \n",
+    "# revise(None, Variable(1, 4, 'down', 4), Variable(0, 1, 'across', 3))\n",
+    "\n",
+    "revise(None, Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crossword.overlaps[(Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Variable(0, 1, 'down', 5): {'EIGHT',\n",
+       "  'FIVE',\n",
+       "  'FOUR',\n",
+       "  'NINE',\n",
+       "  'ONE',\n",
+       "  'SEVEN',\n",
+       "  'SIX',\n",
+       "  'TEN',\n",
+       "  'THREE',\n",
+       "  'TWO'},\n",
+       " Variable(4, 1, 'across', 4): {'EIGHT',\n",
+       "  'FIVE',\n",
+       "  'FOUR',\n",
+       "  'NINE',\n",
+       "  'ONE',\n",
+       "  'SEVEN',\n",
+       "  'SIX',\n",
+       "  'TEN',\n",
+       "  'THREE',\n",
+       "  'TWO'},\n",
+       " Variable(1, 4, 'down', 4): {'ONE', 'SIX', 'TEN', 'TWO'},\n",
+       " Variable(0, 1, 'across', 3): {'EIGHT',\n",
+       "  'FIVE',\n",
+       "  'FOUR',\n",
+       "  'NINE',\n",
+       "  'ONE',\n",
+       "  'SEVEN',\n",
+       "  'SIX',\n",
+       "  'TEN',\n",
+       "  'THREE',\n",
+       "  'TWO'}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "creator.domains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(Variable(0, 1, 'down', 5), Variable(4, 1, 'across', 4)): (4, 0),\n",
        " (Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)): None,\n",
        " (Variable(0, 1, 'down', 5), Variable(0, 1, 'across', 3)): (0, 0),\n",
-       " (Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4)): (3, 3),\n",
+       " (Variable(4, 1, 'across', 4), Variable(0, 1, 'down', 5)): (0, 4),\n",
+       " (Variable(4, 1, 'across', 4), Variable(1, 4, 'down', 4)): (3, 3),\n",
+       " (Variable(4, 1, 'across', 4), Variable(0, 1, 'across', 3)): None,\n",
        " (Variable(1, 4, 'down', 4), Variable(0, 1, 'down', 5)): None,\n",
+       " (Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4)): (3, 3),\n",
        " (Variable(1, 4, 'down', 4), Variable(0, 1, 'across', 3)): None,\n",
-       " (Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)): None,\n",
        " (Variable(0, 1, 'across', 3), Variable(0, 1, 'down', 5)): (0, 0),\n",
+       " (Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)): None,\n",
        " (Variable(0, 1, 'across', 3), Variable(1, 4, 'down', 4)): None}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "crossword.overlaps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'EIGHT', 'FIVE', 'FOUR', 'NINE', 'ONE', 'SEVEN', 'SIX', 'TEN', 'THREE', 'TWO'}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crossword.words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.CrosswordCreator at 0x7ff1baddfe50>"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "creator"
    ]
   },
   {
