--- a/crossword/cs50_crossword_jupiter.ipynb
+++ b/crossword/cs50_crossword_jupiter.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,6 @@
     "            # check lenght of the word in assigment and update with new values\n",
     "            test[i] = remove_words_not_consistent(index_in_list(i.length, lenth_of_words), test[i])\n",
     "\n",
-    "\n",
     "    def revise(self, x, y):\n",
     "        \"\"\"\n",
     "        Make variable `x` arc consistent with variable `y`.\n",
@@ -299,9 +298,9 @@
     "                    # 2 the lengh of them must be more that letters of overlap\n",
     "                    # 3 check if i-th value of x not equal to the j-th value of y\n",
     "                    if word1 != word2 \\\n",
-    "                    and len(word1) >= (self.overlaps[x, y][0] + 1)\\\n",
-    "                    and len(word2) >= (self.overlaps[x, y][1] + 1) \\\n",
-    "                    and word1[self.overlaps[x, y][0]] != word2[self.overlaps[x, y][1]]:\n",
+    "                    and len(word1) >= (self.crossword.overlaps[x, y][0] + 1)\\\n",
+    "                    and len(word2) >= (self.crossword.overlaps[x, y][1] + 1) \\\n",
+    "                    and word1[self.crossword.overlaps[x, y][0]] != word2[self.crossword.overlaps[x, y][1]]:\n",
     "                        # change status of revised\n",
     "                        revised = True\n",
     "                        # add to the list\n",
@@ -318,18 +317,41 @@
     "        Update `self.domains` such that each variable is arc consistent.\n",
     "        If `arcs` is None, begin with initial list of all arcs in the problem.\n",
     "        Otherwise, use `arcs` as the initial list of arcs to make consistent.\n",
-    "\n",
     "        Return True if arc consistency is enforced and no domains are empty;\n",
     "        return False if one or more domains end up empty.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError\n",
+    "        # check if named agrs is None\n",
+    "        if arcs is None:\n",
+    "            quere = []\n",
+    "            # iterate over each member of overlaping \n",
+    "            for member in self.crossword.overlaps:\n",
+    "                # add to the quere if memeber is not None\n",
+    "                if self.crossword.overlaps[member] is not None:\n",
+    "                    quere.append(member)\n",
+    "        else:\n",
+    "            # otherwise make a copy\n",
+    "            quere = arcs.copy()\n",
+    "        # pop elements from quere untill it is empty\n",
+    "        while len(quere) > 0:\n",
+    "            x, y = quere.pop()\n",
+    "            # check consistency of X in Y domain \n",
+    "            if self.revise(x, y):\n",
+    "                if not self.domains[x] == 0:\n",
+    "                    return False\n",
+    "                # iterate over and add combination that is consistent\n",
+    "                for z in self.crossword.neighbors(x) - self.domains[y]:\n",
+    "                    quere.append((z, x))\n",
+    "        return True\n",
     "\n",
     "    def assignment_complete(self, assignment):\n",
     "        \"\"\"\n",
     "        Return True if `assignment` is complete (i.e., assigns a value to each\n",
     "        crossword variable); return False otherwise.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError\n",
+    "        for word in self.crossword.variables:\n",
+    "            if word not in assignment.keys() and assignment[word] not in self.crossword.words:\n",
+    "                return False\n",
+    "        return True \n",
     "\n",
     "    def consistent(self, assignment):\n",
     "        \"\"\"\n",
@@ -391,259 +413,175 @@
     "    # else:\n",
     "    #     creator.print(assignment)\n",
     "    #     if output:\n",
-    "    #         creator.save(assignment, output)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({(Variable(0, 1, 'down', 5), Variable(4, 1, 'across', 4)): (4, 0),\n",
-       "  (Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)): None,\n",
-       "  (Variable(0, 1, 'down', 5), Variable(0, 1, 'across', 3)): (0, 0),\n",
-       "  (Variable(4, 1, 'across', 4), Variable(0, 1, 'down', 5)): (0, 4),\n",
-       "  (Variable(4, 1, 'across', 4), Variable(1, 4, 'down', 4)): (3, 3),\n",
-       "  (Variable(4, 1, 'across', 4), Variable(0, 1, 'across', 3)): None,\n",
-       "  (Variable(1, 4, 'down', 4), Variable(0, 1, 'down', 5)): None,\n",
-       "  (Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4)): (3, 3),\n",
-       "  (Variable(1, 4, 'down', 4), Variable(0, 1, 'across', 3)): None,\n",
-       "  (Variable(0, 1, 'across', 3), Variable(0, 1, 'down', 5)): (0, 0),\n",
-       "  (Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)): None,\n",
-       "  (Variable(0, 1, 'across', 3), Variable(1, 4, 'down', 4)): None},\n",
-       " {'EIGHT',\n",
-       "  'FIVE',\n",
-       "  'FOUR',\n",
-       "  'NINE',\n",
-       "  'ONE',\n",
-       "  'SEVEN',\n",
-       "  'SIX',\n",
-       "  'TEN',\n",
-       "  'THREE',\n",
-       "  'TWO'},\n",
-       " {Variable(0, 1, 'across', 3),\n",
-       "  Variable(0, 1, 'down', 5),\n",
-       "  Variable(1, 4, 'down', 4),\n",
-       "  Variable(4, 1, 'across', 4)})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crossword.overlaps, crossword.words, crossword.variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5,\n",
-       " [[False, True, True, True, False],\n",
-       "  [False, True, False, False, True],\n",
-       "  [False, True, False, False, True],\n",
-       "  [False, True, False, False, True],\n",
-       "  [False, True, True, True, True]],\n",
-       " {Variable(0, 1, 'across', 3),\n",
-       "  Variable(0, 1, 'down', 5),\n",
-       "  Variable(1, 4, 'down', 4),\n",
-       "  Variable(4, 1, 'across', 4)},\n",
-       " 5)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crossword.height, crossword.structure, crossword.variables, crossword.width"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(True,\n",
-       " ['FIVE',\n",
-       "  'FIVE',\n",
-       "  'THREE',\n",
-       "  'THREE',\n",
-       "  'NINE',\n",
-       "  'NINE',\n",
-       "  'EIGHT',\n",
-       "  'EIGHT',\n",
-       "  'EIGHT',\n",
-       "  'EIGHT',\n",
-       "  'EIGHT',\n",
-       "  'SEVEN',\n",
-       "  'SEVEN',\n",
-       "  'FOUR',\n",
-       "  'FOUR',\n",
-       "  'FOUR',\n",
-       "  'FOUR',\n",
-       "  'FOUR'])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def revise(self, x, y):\n",
-    "    \"\"\"\n",
-    "    Make variable `x` arc consistent with variable `y`.\n",
-    "    To do so, remove values from `self.domains[x]` for which there is no\n",
-    "    possible corresponding value for `y` in `self.domains[y]`.\n",
-    "    Return True if a revision was made to the domain of `x`; return\n",
-    "    False if no revision was made.\n",
-    "    \"\"\"\n",
-    "    # start with false \n",
-    "    revised = False\n",
-    "    # empty list\n",
-    "    update_words = []\n",
-    "    # check if words overlap in assigment\n",
-    "    if crossword.overlaps[x, y] is not None:\n",
-    "        # iterate over x and y values\n",
-    "        for word1 in creator.domains[x]:\n",
-    "            for word2 in creator.domains[y]:\n",
-    "                # 1 words should not be the same\n",
-    "                # 2 the lengh of them must be more that letters of overlap\n",
-    "                # 3 check if i-th value of x not equal to the j-th value of y\n",
-    "                if word1 != word2 \\\n",
-    "                and len(word1) >= (crossword.overlaps[x, y][0] + 1)\\\n",
-    "                and len(word2) >= (crossword.overlaps[x, y][1] + 1) \\\n",
-    "                and word1[crossword.overlaps[x, y][0]] != word2[crossword.overlaps[x, y][1]]:\n",
-    "                    # change status of revised\n",
-    "                    revised = True\n",
-    "                    # add to the list\n",
-    "                    update_words.append(word1)\n",
-    "    # itetare of the NOT acr consistem words of x and remome them\n",
-    "    for word in set(update_words):\n",
-    "        # pop the values of x from domain\n",
-    "        creator.domains[x].remove(word)\n",
-    "    #return the status \n",
-    "    return revised, update_words\n",
-    " \n",
-    "# revise(None, Variable(1, 4, 'down', 4), Variable(0, 1, 'across', 3))\n",
+    "    #         creator.save(assignment, output)\n",
+    "    \n",
+    "##########################################################\n",
     "\n",
-    "revise(None, Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4))"
+    "def consistent(self, assignment):\n",
+    "    \"\"\"\n",
+    "    Return True if `assignment` is consistent (i.e., words fit in crossword\n",
+    "    puzzle without conflicting characters); return False otherwise.\n",
+    "    \"\"\"\n",
+    "    consistent = True\n",
+    "    # check unique values of assigment and add to dict\n",
+    "    values_words = {}\n",
+    "    for word in assignment.values():\n",
+    "        values_words = word\n",
+    "    # check one time uniqueness of word in \n",
+    "    for value in assignment.values():\n",
+    "        if value != values_words:\n",
+    "            consistent = False\n",
+    "    \n",
+    "    # check the lenth of the words\n",
+    "    for key, value in assignment.items():\n",
+    "        # print(key.length, [len(n) for n in value])\n",
+    "        # iterate over every len(word) \n",
+    "        for num in [len(n) for n in value]:\n",
+    "            # check the lenght of word in assiment and word in the list\n",
+    "            if num != key.length:\n",
+    "                consistent = False\n",
+    "    \n",
+    "    # no confilict with neightboring\n",
+    "    # find all overlaps or not\n",
+    "    values = creator.crossword.overlaps #self\n",
+    "    # select words that overplas (by not None value)\n",
+    "    values_constrains = [i for i in values if values[i] is not None]\n",
+    "    \n",
+    "    tup = {}\n",
+    "    \n",
+    "    for task in creator.crossword.variables:\n",
+    "        tup[task] = creator.crossword.neighbors(task)\n",
+    "    \n",
+    "    print(tup)\n",
+    "        \n",
+    "    print('f')\n",
+    "    \n",
+    "    for value in values_constrains:\n",
+    "\n",
+    "        print(value)\n",
+    "        \n",
+    "    print('fff')\n",
+    "        \n",
+    "    for key, value in tup.items():\n",
+    "        for task in values_constrains:\n",
+    "            if key in task:\n",
+    "                print(value)\n",
+    "    # добавить в результат и сравнить с "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{Variable(0, 1, 'down', 5): {Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)}, Variable(0, 1, 'across', 3): {Variable(0, 1, 'down', 5)}, Variable(1, 4, 'down', 4): {Variable(4, 1, 'across', 4)}, Variable(4, 1, 'across', 4): {Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)}}\n",
+      "f\n",
+      "(Variable(0, 1, 'down', 5), Variable(0, 1, 'across', 3))\n",
+      "(Variable(0, 1, 'down', 5), Variable(4, 1, 'across', 4))\n",
+      "(Variable(0, 1, 'across', 3), Variable(0, 1, 'down', 5))\n",
+      "(Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4))\n",
+      "(Variable(4, 1, 'across', 4), Variable(0, 1, 'down', 5))\n",
+      "(Variable(4, 1, 'across', 4), Variable(1, 4, 'down', 4))\n",
+      "fff\n",
+      "{Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)}\n",
+      "{Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)}\n",
+      "{Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)}\n",
+      "{Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)}\n",
+      "{Variable(0, 1, 'down', 5)}\n",
+      "{Variable(0, 1, 'down', 5)}\n",
+      "{Variable(4, 1, 'across', 4)}\n",
+      "{Variable(4, 1, 'across', 4)}\n",
+      "{Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)}\n",
+      "{Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)}\n",
+      "{Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)}\n",
+      "{Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = 0\n",
+    "consistent(df, creator.domains)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 3)"
+       "{Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crossword.overlaps[(Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4))]"
+    "creator.crossword.neighbors((Variable(0, 1, 'down', 5)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{Variable(0, 1, 'down', 5): {'EIGHT',\n",
-       "  'FIVE',\n",
-       "  'FOUR',\n",
-       "  'NINE',\n",
-       "  'ONE',\n",
-       "  'SEVEN',\n",
-       "  'SIX',\n",
-       "  'TEN',\n",
-       "  'THREE',\n",
-       "  'TWO'},\n",
-       " Variable(4, 1, 'across', 4): {'EIGHT',\n",
-       "  'FIVE',\n",
-       "  'FOUR',\n",
-       "  'NINE',\n",
-       "  'ONE',\n",
-       "  'SEVEN',\n",
-       "  'SIX',\n",
-       "  'TEN',\n",
-       "  'THREE',\n",
-       "  'TWO'},\n",
-       " Variable(1, 4, 'down', 4): {'ONE', 'SIX', 'TEN', 'TWO'},\n",
-       " Variable(0, 1, 'across', 3): {'EIGHT',\n",
-       "  'FIVE',\n",
-       "  'FOUR',\n",
-       "  'NINE',\n",
-       "  'ONE',\n",
-       "  'SEVEN',\n",
-       "  'SIX',\n",
-       "  'TEN',\n",
-       "  'THREE',\n",
-       "  'TWO'}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "creator.domains"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(Variable(0, 1, 'down', 5), Variable(4, 1, 'across', 4)): (4, 0),\n",
-       " (Variable(0, 1, 'down', 5), Variable(1, 4, 'down', 4)): None,\n",
-       " (Variable(0, 1, 'down', 5), Variable(0, 1, 'across', 3)): (0, 0),\n",
-       " (Variable(4, 1, 'across', 4), Variable(0, 1, 'down', 5)): (0, 4),\n",
-       " (Variable(4, 1, 'across', 4), Variable(1, 4, 'down', 4)): (3, 3),\n",
-       " (Variable(4, 1, 'across', 4), Variable(0, 1, 'across', 3)): None,\n",
-       " (Variable(1, 4, 'down', 4), Variable(0, 1, 'down', 5)): None,\n",
-       " (Variable(1, 4, 'down', 4), Variable(4, 1, 'across', 4)): (3, 3),\n",
-       " (Variable(1, 4, 'down', 4), Variable(0, 1, 'across', 3)): None,\n",
-       " (Variable(0, 1, 'across', 3), Variable(0, 1, 'down', 5)): (0, 0),\n",
-       " (Variable(0, 1, 'across', 3), Variable(4, 1, 'across', 4)): None,\n",
-       " (Variable(0, 1, 'across', 3), Variable(1, 4, 'down', 4)): None}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crossword.overlaps"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
